prevent overflow of images

--- a/src/CSS/Homepage.css
+++ b/src/CSS/Homepage.css
@@ -1,3 +1,6 @@
+.app-container {
+  overflow: hidden;
+}
 .image-container {
   position: relative;
   text-align: center;
